2005-11-06  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add tar, rar, and tarz for package icon
	Patch from Jakub Steiner

2005-11-02  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add mapping for save icon
	Add links for the stock undo/redo icons in GNOME and GTK+

2005-11-01  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Fix typo for edit-undo

2005-11-01  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Update for more KDE icons, and add the
	links for edit-redo and edit-undo
	Patch from Niko Mirthes

2005-10-28  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for cut and copy icons

2005-10-26  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links to gtk+/gnome stock trash icons

2005-10-18  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.3.2 for release

2005-10-18  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add link for the bookmark-new icon
	Add a link for gtk-help to the help-browser icon
	Add a link for gnome-joystick to the applications-games icon

2005-10-18  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Remove kmail link and fix typo for the
	ksysguard link. patch from Niko Mirthes

2005-10-18  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Link stock_home to the new home icon
	Add links for the stop icon

2005-10-15  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.3.1 for release

2005-10-15  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Few more KDE links from Niko Mirthes
	Add stock_new-appointment and web-browser links for GNOME

2005-10-14  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add more KDE links. Patch from Niko Mirthes
	Add link for gnome-lockscreen to the system-lock-screen icon

2005-10-13  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.3.0 for release
